# pr2changelog

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  action.yaml  local_test.bat  main.py  pyproject.toml  sweep.yaml
.github/workflows/: pr2changelog.yml  tests.yml
pr2changelog/: __init__.py  api_caller.py  change.py  context.py  document.py  exceptions.py  gha_utils.py  markdown.py  pr.py  test_pr.json
tests/: pr2changelog_local.yml  test_change.py  test_context.py  test_document.py  test_integration.py  test_pr.py  test_pr2changelog.py
tests/data/: edited.json  merged.json  test_CHANGELOG.md  test_CHANGELOG_2.md
